--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "\"I will daily update the github repository\"",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
+    "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
