Express-Session login

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"I will daily update the github repository\"",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
